re PR other/54726 (libbacktrace segfaults on gcc_asserts with stripped gcc)

PR other/54726
	* elf.c (backtrace_initialize): Set *fileln_fn, not
	state->fileln_fn.

From-SVN: r191811